--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,8 @@
 /* Global */
-/* Homepage */
-/* Cars Page */
-/* Bikes Page */
-/* Post Page */
-
 body{
     margin:0;
     padding:0;
+    
 }
 
 .container {
@@ -23,11 +19,86 @@ body{
 }
  
 .container-right{
-    width: 140%;
-    background-color:#707B7C ;
+    width: 100%;
+    background-color:#dfebec;
     padding: 1rem;
-    border: right width 0px;;
+    border: right width 0px;
 }
+
+        /* nav bar */
+        .container-fluid {
+            background-color: #405052cc;
+            font-size: 120%;
+        } 
+
+        .navbar {
+            --bs-navbar-padding-x: none !important;
+            --bs-navbar-padding-y: none !important;
+        }
+
+        .nav-link {
+            --bs-nav-link-color: #ffffff !important;
+            --bs-nav-link-hover-color: #bb9f00 !important;
+        }
+
+        .nav-link,.active {
+            color: #ffffff;
+        }
+        
+        .navbar-brand {
+            color: #f8ffd1 !important;
+            font-size: 105% !important;
+        }
+        /*----------------------------*/
+
+        /* Products attibutes */
+        .item-section{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content:space-evenly;
+
+        }
+
+        .button-ask {
+            font-size:16px;
+            text-align: center;
+            background-color: #ffffff;
+            color:#000000;
+            padding: 4px 20px;
+            border:2px solid #4CAf50;
+            transition-duration: 0.4s;
+            border-radius: 3px;
+
+        }
+          
+        .button-ask:hover {
+            background-color: #41c445; /* Green */
+            color: white;
+            border-radius: 7px;
+        }
+        
+        .item-container {
+            margin:15px;
+            padding:2px 16px;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            transition: 0.3s;
+            border-radius: 5px;
+        }
+        .item-container img{
+            width: 300px;
+            border-radius: 3px 3px 0 0;
+        }
+
+        .item-container:hover {
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+          }
+
+/* Homepage */
+/* Cars Page */
+/* Bikes Page */
+/* Post Page */
+
+
 
 .menu{
 
