--- a/vistas/index.pug
+++ b/vistas/index.pug
@@ -3,9 +3,46 @@ html
         title= titulo 
     body 
         div.conteiner
-            input(type="text" placeholder="nombre" id="nombre")
-            input(type="text" placeholder="numero" id="numero")
-            button(id="btn_agregar") agregar contacto
-            each contacto   in contactos 
-                p= `${contacto.id_persona} -- ${contacto.nombre}`
+            form(action="/submit" method="post")
+            
+            label(for="email") Email :
+            input(type="email" id="email" name="email")
+            br
+            label(for="brand") Brand:
+            input(type="brand" id="brand" name="brand")
+            br
+            label(for="model") Model:
+            textarea(id="model" name="model")
+            br
+            label(for="year") Year:
+            textarea(id="year" name="year")
+            br
+            
+            label(for="kms") Kms:
+            textarea(id="kms" name="kms")
+            br
+            
+            label(for="fuel") Fuel :
+            select(name="fuel")
+                option(value="Petrol") Petrol
+                option(value="Diesel") Diesel
+                option(value="Gas") Gas 
+                option(value="Electric") Electric
+            br 
+
+            label(for="price") Price :
+            textarea(id="price" name="price")
+            br
+
+            label(for="photo") Photo :
+            input(type="file" id="photo" name="photo" accept="image/jpeg" required)
+            br    
+
+            label(for="description") Description :
+            textarea(id="description" name="description")
+            br 
+
+
+            input(type="submit" value="Enviar")
+
     script(src="funciones.js")
