--- a/vistas/index.pug
+++ b/vistas/index.pug
@@ -1,6 +1,7 @@
 html 
     head    
         title= titulo 
+        link(rel="stylesheet", href="styles.css")
     body 
         div.conteiner
             form(action="/submit" method="post")
