funca-desc(undefined)

--- a/vistas/index.pug
+++ b/vistas/index.pug
@@ -41,11 +41,11 @@ html
 
             //- label(for="photo") Photo :
             //- input(type="file" id="photo" name="photo" accept="image/jpeg" required)
-            //- br    
+             
 
-            //- label(for="description") Description :
-            //- textarea(id="description" name="description")
-            //- br 
+            label(for="description") Description :
+            textarea(id="description" name="description")
+             
 
             button(id="btnAgregar") Agregar vehiculo 
 
