se carga tood pero la foto no como archivo xd

--- a/vistas/index.pug
+++ b/vistas/index.pug
@@ -39,8 +39,8 @@ html
             textarea(id="price" name="price")
             br
 
-            //- label(for="photo") Photo :
-            //- input(type="file" id="photo" name="photo" accept="image/jpeg" required)
+            label(for="photo") Describa la foto :
+            textarea(id="photo" name="photo")
              
 
             label(for="description") Description :
