--- a/vistas/homepage.pug
+++ b/vistas/homepage.pug
@@ -3,11 +3,12 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")    
-        title= titulo 
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="styles.css")
         link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous")
-    body 
+        title Motor Sports
+    body
+        //-  Navigation Bar
         header.main-header
             nav.navbar.navbar-expand-lg.bg-body-tertiary
                 div.container-fluid
@@ -28,48 +29,13 @@ html(lang="en")
                                 a.dropdown-item(href="motorBike.html") Motorcycles
                         li.nav-item
                             a.nav-link(href="index.pug") Promote your vehicle
-        
-        div.conteiner
-            form(action="/submit" method="post")
-            
-            label(for="email") Email :
-            input(type="email" id="email" name="email")
-            br
-            label(for="brand") Brand:
-            input(type="text" id="brand" name="brand")
-            br
-            label(for="model") Model:
-            input(type="text" id="model" name="model")
-            br
-            label(for="year") Year:
-            input(type="number" id="year" name="year")
-            br
-            
-            label(for="kms") Kms:
-            input(type="number" id="kms" name="kms")
-            br
-            
-            label(for="fuel") Fuel :
-            select(name="fuel")
-                option(value="Petrol") Petrol
-                option(value="Diesel") Diesel
-                option(value="Gas") Gas 
-                option(value="Electric") Electric
-            br 
-
-            label(for="price") Price (USD):
-            input(type="number" id="price" name="price")
-            br
-
-            label(for="photo") Photo :
-            input(type="file" id="photo" name="photo" accept="image/jpeg" required)
-            br    
-
-            label(for="description") Description :
-            textarea(id="description" name="description")
-            br 
+        main
+            div.container#container
+                div.container-right
+                    section
+                        h1
+                            strong Welcome to the biggest car-dealer in the region!
+                    img.ferraris-img(src="assets/MotorSports_Home.jpg", alt="ferraris")
 
 
-            input(type="submit" value="Enviar")
-
-    script(src="funciones.js")
+    
