--- a/fe/publish.pug
+++ b/fe/publish.pug
@@ -27,7 +27,7 @@ html(lang="en")
                             li
                                 a.dropdown-item(href="motorBike.html") Motorcycles
                         li.nav-item
-                            a.nav-link(href="index.pug") Promote your vehicle
+                            a.nav-link(href="publish.pug") Promote your vehicle
         
         div.conteiner
             form(action="/submit" method="post")
