--- a/fe/styles.css
+++ b/fe/styles.css
@@ -68,6 +68,11 @@ body{
   }
 
   #info-personal, #experiencia {
+    background-color: #00ffff;
+    
+  } 
+
+  .trabajo {
     margin:15px;
     padding:2px 16px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.342);
